--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node_modules/.bin/webpack-dev-server --progress"
-
   },
   "author": "",
   "license": "ISC",
@@ -27,6 +26,7 @@
     "react-dnd": "^2.1.4",
     "react-dnd-html5-backend": "^2.1.2",
     "react-dom": "^15.3.1",
+    "react-router": "^2.8.1",
     "whatwg-fetch": "^1.0.0"
   }
 }
